@@ -1,3 +1,8 @@
+2004-07-29  Florian Boor  <florian.boor@kernelconcepts.de>
+
+    * contacts-layout-bigscreen.xml: Added fields for name details.
+    * namedetail.c: New file, started implementing name detail editor.
+
 2004-07-28  Florian Boor  <florian.boor@kernelconcepts.de>
 
     * main.c: Several changes to keyboard control, escape clears search.
